@@ -1320,6 +1320,7 @@
 41) kernel: net: route: prevent oops.<br>
 42) kernel: net: fix crashes on pppoe disconnect/reconnect.<br>
 43) kernel: net: sch_htb: let skb->priority refer to non-leaf class.<br>
+44) kernel: net: net_sched: sfq: put sfq_unlink in a do - while loop.<br>
 <br>
 <br>
 <b>TODO:</b><br>
